<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="id.web.androidhyper.bakingapp.ui.stepssegment.detailstep.DetailStepsFragment">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/player_view"
            android:layout_width="match_parent"
            android:layout_marginTop="-4dp"
            android:layout_marginBottom="@dimen/margin_med"
            android:layout_height="320dp"/>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/short_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_med"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/textview_headline"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    tools:text="Starting prep"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/margin_med"
                    android:layout_marginRight="@dimen/margin_small"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:background="@color/abu"/>
                <TextView
                    android:id="@+id/tv_contentdesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_small"
                    android:textSize="@dimen/textview_subheading"
                    android:gravity="center_vertical"
                    tools:text="This is test for detail content description,"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:orientation="horizontal">
            <Button
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:id="@+id/bt_prev"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/prev_to_step"
                android:layout_height="wrap_content" />
            <Button
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:id="@+id/bt_next"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/next_to_step"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
