<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rv_steps"
    tools:context="id.web.androidhyper.bakingapp.ui.stepssegment.liststeps.StepsListFragment"/>
